fixup! PR feedback, visual alignment changes, removed older to-do items. still have a number of fixups! and tests to run before asking for next review round.

--- a/lms/static/sass/discussion/_discussion.scss
+++ b/lms/static/sass/discussion/_discussion.scss
@@ -1,5 +1,6 @@
 // forums - main app styling
 // ====================
+// NOTE: this file is deprecated, and we should not continue to add to this file. Use other partials as appropriate.
 
 body.discussion {
 
@@ -109,7 +110,6 @@ body.discussion {
   }
 
   .wmd-panel {
-    min-width: 500px;
     width: 100%;
   }
 
