--- a/lms/static/sass/discussion/views/_thread.scss
+++ b/lms/static/sass/discussion/views/_thread.scss
@@ -25,14 +25,11 @@ body.discussion, .discussion-module {
 
     .post-header-content {
       display: inline-block;
-      // width: calc(flex-grid(9,12) - $post-image-dimension);
       width: flex-grid(8,12); 
     }
 
     .post-header-actions {
       @include float(right);
-      display: inline-block;
-      vertical-align: middle;
       width: flex-grid(3,12);
     }
   }
@@ -44,15 +41,14 @@ body.discussion, .discussion-module {
     .response-header-content {
       display: inline-block;
       vertical-align: top;
-      // width: calc((flex-grid(11,12)) - $response-image-dimension);
       width: flex-grid(10,12);
     }
 
     .response-header-actions {
-      position: absolute;
-      @include right($baseline);
-      top: ($baseline);
       @include float(right);
+      @include right($baseline);
+      position: absolute;
+      top: ($baseline);
     }
   }
 
@@ -60,11 +56,10 @@ body.discussion, .discussion-module {
   .discussion-comment {
 
     .response-body {
+      @extend %t-copy-sub2;
       display: inline-block;
       margin-bottom: ($baseline/2);
-      //width: calc((flex-grid(11,12)) - $comment-image-dimension);
       width: flex-grid(9,12);
-      font-size: 13px;
 
       p + p {
         margin-top: 12px;
@@ -73,9 +68,6 @@ body.discussion, .discussion-module {
 
     .comment-actions-list {
       @include float(right);
-      display: inline-block;
-      width: flex-grid(2,12);
-      vertical-align: top;
     }
 
     .posted-details {
@@ -95,6 +87,7 @@ body.discussion, .discussion-module {
 body.discussion {
 
   .discussion-post, .discussion-response, .discussion-comment {
+    @include clearfix();
     
     // thread - images
     .author-image {
@@ -142,6 +135,10 @@ body.discussion {
       }
     }
   }
+
+  .discussion-post .post-body, .discussion-response .response-body {
+    @include padding-right($baseline); //ensures content doesn't overlap on post or response actions.
+  }
 }
 
 // +post - individual element styling
@@ -158,8 +155,6 @@ body.discussion .discussion-post {
       margin-bottom: ($baseline/4);
       letter-spacing: 0;
     }
-
-    // post labels
   }
 
   // post body
